Updated page to render data

--- a/public/home.html
+++ b/public/home.html
@@ -4,5 +4,7 @@
         <title>Catalog</title>
         <link rel="stylesheet" type="text/css" href="/styles/style.css"/>
     </head>
-    <body>Hello World</body>
+    <body>
+        <script src="/js/db-display.js"></script>
+    </body>
 </html>
