--- a/public/home.html
+++ b/public/home.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" type="text/css" href="/styles/style.css"/>
     </head>
     <body>
-        <script src="/js/db-display.js"></script>
+        <script src="/scripts/db-display.js"></script>
     </body>
 </html>
