Split fetch call to separate js script Renamed fetch -> get

--- a/public/home.html
+++ b/public/home.html
@@ -3,6 +3,7 @@
     <head>
         <title>Catalog</title>
         <link rel="stylesheet" type="text/css" href="/styles/style.css"/>
+        <script src="/scripts/rest.js"></script>
     </head>
     <body>
         <script src="/scripts/db-display.js"></script>
