--- a/public/home.html
+++ b/public/home.html
@@ -6,6 +6,13 @@
         <script src="/scripts/utils/rest.js"></script>
     </head>
     <body>
-        <script src="/scripts/db-display.js"></script>
+        <script src="/scripts/build-table.js"></script>
+        <script src="/scripts/event.js"></script>
+
+        <div class="app-container">
+            <button class="db-btn" onclick="sendRow()">+</button>
+        </div>
+
+        <script src="/scripts/home-loader.js"></script>
     </body>
 </html>
